groups/flowDefinitions/objects/TW1_Brindes_Entregues__c.object
<CustomObject>
    <fields>
        <fullName>Data_Entrega__c</fullName>
        <label>Data Entrega</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parametros_da_Promocao__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Parâmetros da Promoção</label>
        <referenceTo>TW1_Parametros_Promocao__c</referenceTo>
        <relationshipLabel>Brindes Entregues</relationshipLabel>
        <relationshipName>Brindes_Entregues</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantidade__c</fullName>
        <label>Quantidade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Brinde__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brinde</label>
        <referenceTo>TW1_Brinde__c</referenceTo>
        <relationshipLabel>Brindes Entregues</relationshipLabel>
        <relationshipName>Brindes_Entregues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Conta pessoal padrão</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Brindes Entregues</relationshipLabel>
        <relationshipName>Brindes_Entregues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Data_do_Estorno__c</fullName>
        <label>Data do Estorno</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Formas_de_Pagamento__c</fullName>
        <label>Formas de Pagamento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dinheiro</fullName>
                </value>
                <value>
                    <fullName>Cartão Credito</fullName>
                </value>
                <value>
                    <fullName>Cartão Debito</fullName>
                </value>
                <value>
                    <fullName>Cartão Caixa</fullName>
                </value>
                <value>
                    <fullName>Cartão Caixa ELO</fullName>
                </value>
                <value>
                    <fullName>Visa Vale</fullName>
                </value>
                <value>
                    <fullName>VISA PLATINUM</fullName>
                </value>
                <value>
                    <fullName>VISA INFINITE</fullName>
                </value>
                <value>
                    <fullName>CLUBE RIO DESIGN</fullName>
                </value>
                <value>
                    <fullName>Dinheiro(FDS)</fullName>
                </value>
                <value>
                    <fullName>Cartão Débito(FDS)</fullName>
                </value>
                <value>
                    <fullName>Cartão Crédito(FDS)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Operador_do_Estorno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operador do Estorno</label>
        <referenceTo>TW1_Operador__c</referenceTo>
        <relationshipLabel>Brindes Entregues</relationshipLabel>
        <relationshipName>Brindes_Entregues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Shopping_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shopping</label>
        <referenceTo>TW1_Shopping__c</referenceTo>
        <relationshipLabel>Brindes Entregues</relationshipLabel>
        <relationshipName>Brindes_Entregues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Stand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stand</label>
        <referenceTo>TW1_Stand__c</referenceTo>
        <relationshipLabel>Brindes Entregues</relationshipLabel>
        <relationshipName>Brindes_Entregues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tipo__c</fullName>
        <label>Tipo</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Produto</fullName>
                </value>
                <value>
                    <fullName>Voucher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valor__c</fullName>
        <label>Valor (R$)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Brindes Entregues</label>
    <nameField>
        <displayFormat>BE-{0000}</displayFormat>
        <label>Código da Entrega de Brinde</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brindes Entregues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>